# AirDrums

./: .gitignore
backend/: CMakeLists.txt  main.cpp  main.py  test.py
frontend/: package-lock.json
